fix(backend+frontend): dead imports, deprecated API, a11y DataTable, collector consistency
Backend:
- BlazeApiException.from(): getRawStatusCode() → getStatusCode().value() (Spring 6.x deprecated)
- AlertController: fully-qualified refs → proper imports; hardcoded 1000 → AlertStore.MAX_ALERTS
- AlertStore.MAX_ALERTS: private → package-private (same-package access)
- AlertService: fully-qualified Map.of/copyOf → imported Map
- AlertRuleService + BlazeEventsLogStore: Collectors.toList() → .toList() (immutable)
- 6 dead imports removed (RateLimitFilter, GiveawayController, GiveawayService, LiveEventService, LiveEventStore, AlertRuleService)

Frontend:
- DataTable: new ariaLabel prop applied to <table> element (WCAG landmark)
- 5 DataTable usages (Alerts, Giveaways, Overlays×2) now have accessible labels
- 5 new translation keys: table.ariaAlertRules/History/Giveaways/Profiles/Overlays (en+pt-BR)

Tests: 331 backend + 27 frontend, all passing. tsc clean, build OK.